WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126735
Fix a build break on EFL debug build
https://bugs.webkit.org/show_bug.cgi?id=126735
Summary
Fix a build break on EFL debug build
Gyuyoung Kim
Reported
2014-01-09 21:53:02 PST
There is a build error when compiling EFL debug build. [ 14%] Building CXX object Source/WebCore/CMakeFiles/WebCore.dir/platform/ThreadTimers.cpp.o /home/gyuyoung/webkit/WebKit/Source/WebCore/platform/ThreadTimers.cpp: In member function ‘void WebCore::ThreadTimers::sharedTimerFiredInternal()’: /home/gyuyoung/webkit/WebKit/Source/WebCore/platform/ThreadTimers.cpp:112:5: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses] cc1plus: all warnings being treated as errors make[2]: *** [Source/WebCore/CMakeFiles/WebCore.dir/platform/ThreadTimers.cpp.o] Error 1 make[1]: *** [Source/WebCore/CMakeFiles/WebCore.dir/all] Error 2
Attachments
Patch
(1.30 KB, patch)
2014-01-09 21:57 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2014-01-09 21:57:36 PST
Created
attachment 220801
[details]
Patch
Anders Carlsson
Comment 2
2014-01-09 22:10:15 PST
Comment on
attachment 220801
[details]
Patch Patch looks good since it doesn't change the meaning, but this makes me wonder what the assertion is there for at all!
Gyuyoung Kim
Comment 3
2014-01-09 22:18:21 PST
Comment on
attachment 220801
[details]
Patch Clearing flags on attachment: 220801 Committed
r161621
: <
http://trac.webkit.org/changeset/161621
>
Gyuyoung Kim
Comment 4
2014-01-09 22:18:27 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug