Fix a build break on EFL debug build https://bugs.webkit.org/show_bug.cgi?id=126735

Reviewed by Anders Carlsson.

No new tests, just build fix.

* platform/ThreadTimers.cpp:
(WebCore::ThreadTimers::sharedTimerFiredInternal):  Add parentheses.

Canonical link: https://commits.webkit.org/144631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161621 268f45cc-cd09-0410-ab3c-d52691b4dbfc